--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; URL='https://newton.kias.re.kr/~byungdo'" />
+<meta http-equiv="refresh" content="0; URL='http://newton.kias.re.kr/~byungdo'" />
