--- a/index.html
+++ b/index.html
@@ -1,1 +1,189 @@
-<meta http-equiv="refresh" content="0; URL='http://newton.kias.re.kr/~byungdo'" />
+<!DOCTYPE html>
+<html>
+
+<head>
+<title> Webpage of Byungdo Park</title>
+</head>
+<font face="Times New Roman">
+<body>
+<img src="images/bdp_20161120.jpg" width="294" height="392"><br><br>Am Poppelsdorf. Photo by J. R.<br>
+
+<!-- <img src="images/bdp_20141127.jpg" width="282" height="348"><br> -->
+
+
+<font size="4">
+<h1><p>Byungdo Park</p></h1>
+<!--<table border="0" align="none">
+  <tr> <td><i>PhD Candidate</i><br>-->
+
+<!--
+<td><i>Quantative Reasoning Fellow</i><br>
+CUNY John Jay College of Criminal Justice<br>
+Department of Mathematics and Computer Science<br>
+524 West 59th Street,<br>
+New York, NY 10019<br><br><br>
+</tr>
+</table>
+<br>-->
+
+<h2><p>About me</p></h2>
+ I am an Assistant Professor at the <a href=http://edu.chungbuk.ac.kr/mathedu/index.do>Department of Mathematics Education</a>, <a href=https://www.cbnu.ac.kr/site/english/main.do>Chungbuk National University</a>.<br><br>
+
+Previously, I was a Research Fellow (Postdoc) at the <a href="http://www.kias.re.kr/">School of Mathematics, Korea Institute for Advanced Study</a>. Before that, I worked in Bonn, Germany as a Postdoctoral Fellow at <a href="http://www.mpim-bonn.mpg.de/">Max-Planck-Institut f&uuml;r Mathematik</a> and as a guest of <a href="http://www.him.uni-bonn.de/">Hausdorff Research Institute for Mathematics</a>. I also taught mathematics and advised students in New York City for seven semesters. I received my PhD from <a href="http://math.gc.cuny.edu">CUNY Graduate Center</a>. Here is my <a href="http://academicworks.cuny.edu/gc_etds/1533/">thesis</a>. Before coming to the US, I studied Mathematics at <a href="http://www.yonsei.ac.kr/">Yonsei University</a> in Seoul, South Korea.<br><br>
+
+Here is my <a href="CV_Park.pdf">CV</a>.<br><br>
+<b>Address:</b> Department of Mathematics Education, Chungbuk National University, 1 Chungdaero Seowon-Gu, Cheongju 28644, Republic of Korea<br><br>
+<b>Office:</b> E1-1 Room 110 <br><br>
+<b>Phone:</b> +82-43-261-2721<br><br>
+
+<!--  I am an Adjunct Assistant Professor at <a href="http://www.hunter.cuny.edu/">CUNY Hunter College</a> and <a href="http://www.bcc.cuny.edu/">CUNY Bronx Community College</a> in New York City.<br><br> -->
+
+
+<!-- 365 Fifth Ave. CUNY Graduate Center Mathematics Room 4208, New York, NY 10016 -->
+<!-- BE CAREFUL, CASE SENSITIVE about FILE FORMAT -->
+<b>Email:</b> <img src="images/eml_cbnu.jpg" width="302" height="63"><td> <td><br><br>
+
+
+<h2><p>Research Interest</p></h2>
+<b>Differential geometry and algebraic topology.</b> Geometric structures on higher bundles, generalized cohomology theories and their equivariant, differential, and twisted refinements. I am also interested in higher categories, index theory, noncommutative geometry, and topology of matters.<br><br>
+
+
+
+
+<h2><p>Publications and preprints</p></h2>
+<ul>
+  <li>Brown representability on directed graphs, with <a href="https://mathscinet.ams.org/mathscinet/MRAuthorID/1255865">Zachary McGuirk</a>.</li>
+  <li>Noncommutative differential K-theory, with <a href="https://arthur-parzygnat.uconn.edu/">Arthur J. Parzygnat</a>, <a href="http://myweb.liu.edu/~dredden/">Corbett Redden</a>, and <a href="https://math-inf.uni-greifswald.de/en/department/about-us/employees/augusto-stoffel/">Augusto Stoffel</a>.</li>
+  <li>A classification of equivariant gerbe connections, with <a href="http://myweb.liu.edu/~dredden/">Corbett Redden</a>, <a href="https://doi.org/10.1142/S0219199718500013"><em>Commun.
+Contemp. Math.</a></em> <b>21</b>(2) (2019) 1--40. <a href="http://arxiv.org/abs/1709.06003">ArXiv</a></li>
+  <li>Geometric models of twisted differential K-theory I, <em><a href="https://link.springer.com/article/10.1007%2Fs40062-017-0177-z">J. Homotopy and Relat. Struct.</a></em>, <b>13</b>(1) (2018) 143--167. <a href="http://arxiv.org/abs/1602.02292">ArXiv</a></li>
+  <li>A smooth variant of Hopkins-Singer differential K-theory, <em><a href="http://nyjm.albany.edu/j/2017/23-30.html">New York J. Math.</a></em>,  <b>23</b> (2017) 655--670. <a href="http://arxiv.org/abs/1607.08686">ArXiv</a></li>
+ </ul>
+
+  
+<h2><p>In preparation</p></h2>
+<ul>
+  <li>Cycle maps in twisted differential K-theory, with Daniel Grady.</li>
+  <li>Twisted Atiyah-J&auml;nich theorem, near completion. First draft available.</li>
+  <li>Geometric models for twisted differential K-theory II, near completion. First draft available.</li>
+</ul>
+
+<!--
+<h2><p>Work in progress</p></h2>
+<ul>
+  <li>A geometric model of odd twisted differential K-theory, with <a href="http://myweb.liu.edu/~dredden/">Corbett Redden</a></li>
+</ul>
+-->
+
+  
+  
+  
+<h2><p>Teaching</p></h2>
+<dl>
+<dd><a href="teaching/s2020_fom1.html">Foundation of Mathematics I</a> (Graduate Course)</dd>
+<dd><a href="teaching/s2020_tig1.html">Topics in Geometry I</a> (Graduate Course)</dd>
+<dd><a href="teaching/s2020_dg1.html">Differential Geometry I</a></dd>
+<dd><a href="teaching/s2020_geom1.html">Geometry for Teachers I</a></dd>
+</dl>
+<ul>
+  <li><a href="teaching/pastcourses.html">Past courses</a></li>
+</ul>
+
+
+
+  
+  
+<h2><p>Selected talks and slides</p></h2>
+<dl>
+<!-- <dd>01 February 2019: <a href="http://www.kias.re.kr/sub05/sub05_02_01_01.jsp?seqno=PGN1720190117-0003&nowBlock=0&page=1&subject=&mjrcd=1&mjrcd2=1&sdate=20190201&edate=20190201&keyField=&keyWord=&list_url=/sub05/sub05_02_02.jsp&slides=">DG Seminar</a>: "What is an infinity category?" -- Biweekely lecture series. Korea Institute for Advanced Study (KIAS), Seoul, Korea.</dd>-->
+<dd>01 December 2018: <a href="http://events.kias.re.kr/h/SeoulTokyo18/">2018 Seoul-Tokyo Conference</a>, Korea Institute for Advanced Study (KIAS), Seoul, Korea.</dd>
+<dd>24 April 2018: <a href="https://cgp.ibs.re.kr/conferences/Topology_in_Australia_and_South_Korea/">Topology in Australia and South Korea 2018</a>, IBS Center for Geometry and Physics (IBS-CGP), Pohang, Korea <a href="slides/2018-04-24_pohang.pdf">Slides</a></dd>
+<!-- <dd>13 March 2018: <a href="http://www.inu.ac.kr/user/indexSub.do?codyMenuSeq=44529&siteId=isu&dum=dum&boardId=616&page=1&command=view&boardSeq=473061&categoryDepth=null">Mathematics Colloquium</a>, Incheon National University, Incheon, Korea <a href="slides/2018-03-13_incheonU_printerfriendly.pdf">Slides</a></dd> -->
+<dd>29 January -- 02 February 2018: <a href="http://temp.kias.re.kr/h/WSDG2018/">The 13th KIAS Winter School on Differential Geometry</a>, Korea Institute for Advanced Study (KIAS), Seoul, Korea. Conference venue: <a href="http://www.high1.com">Hill Condominium, High 1 Resort</a>, Jeongseon, Korea</dd>
+<!-- <dd>12 December 2017: <a href="http://math.konkuk.ac.kr">Invited lecture</a>, Konkuk University, Seoul, Korea</dd> -->
+<!-- <dd>07 December 2017: <a href="http://temp.kias.re.kr/h/HCMS17/">Higher Categories and Mirror Symmetry</a>, Korea Institute for Advanced Study (KIAS), Seoul, Korea</dd> -->
+<!-- <dd>03 November 2017: <a href="https://tinyurl.com/kiastalk03nov2017">Research group seminar</a>, Korea Institute for Advanced Study (KIAS), Seoul, Korea</dd> -->
+<!-- <dd>27 October 2017: <a href="https://tinyurl.com/kiastalk27oct2017">Research group seminar</a>, Korea Institute for Advanced Study (KIAS), Seoul, Korea</dd> -->
+<dd>26 March 2017: <a href="http://www.mathematics.pitt.edu/event/cohomology-theories-categories-and-applications">Topology Workshop -- Cohomology Theories, Categories, and Applications</a>, The University of Pittsburgh, Pittsburgh PA, USA</dd>
+<!--<dd>28 February 2017: <a href="http://fsw01.bcc.cuny.edu/mathdepartment/Seminar/Seminar.htm">Research Seminar</a>, The Bronx Community College, CUNY, Bronx NY, USA <a href="slides/2017-02-28_BCC.pdf">Slides</a></dd>-->
+<dd>16 February 2017: <a href="https://www.math.princeton.edu/events/seminars/algebraic-topology-seminar/tbd-byungdo-park">Algebraic Topology Seminar</a>, Princeton University, Princeton NJ, USA <a href="slides/2017-02-16_Princeton.pdf">Slides</a></dd>
+<dd>17 November 2016: <a href="http://www.him.uni-bonn.de/topology-2016/k-theory-seminar/"> K-theory Seminar</a>, Hausdorff Research Institute for Mathematics</a>, Bonn, Germany. <a href="https://www.mathematics.uni-bonn.de/veranstaltungskalender/15194">Veranstaltungskalender</a></dd>
+<dd>02 November 2016: <a href="https://www.mpim-bonn.mpg.de/node/6871"> Higher Differential Geometry Seminar</a>, Max-Planck-Institut f&uuml;r Mathematik</a>, Bonn, Germany. <a href="https://www.mathematics.uni-bonn.de/veranstaltungskalender/15132">Veranstaltungskalender</a></dd>
+<dd>06 September 2016: <a href="https://www.math.psu.edu/events/26770">GAP Seminar</a>, Pennsylvania State University, University Park PA, USA.  <!-- <a href="slides/2016-09-06_PSU.pdf">Slides</a>--></dd>
+<!--<dd>08 August -- 12 August 2016: <a href="http://www.geometryandphysics.org/gapxiv/">GAP XIV --- Sheffield "Graded geometry and applications to physics"</a>, University of Sheffield, Sheffield, UK. <a href="http://www.geometryandphysics.org/downloads/gapxiv/GAPXIV_PARK_Byungdo_2016-08-08_Sheffield.pdf">Poster</a></dd>-->
+<dd>22 June 2016: <a href="https://www.math.upenn.edu/events/geometric-model-twisted-differential-k-theory">Deformation Theory Seminar</a>, University of Pennsylvania, Philadelphia PA, USA. <!-- <a href="slides/2016-06-22_UPenn.pdf">Slides</a>--></dd>
+<!-- <dd>27 May 2016: <a href="http://www.lehigh.edu/~dlj0/geotop.html">2016 Lehigh University Geometry and Topology Conference, Lehigh University</a>, Bethlehem PA, USA. <a href="slides/2016-05-27_Lehigh.pdf">Slides</a></dd>-->
+<!-- <dd>22 June 2016: <a href="https://www.math.upenn.edu/cgi-bin/calendar/view.pl?item=printseries&series=Deformation+Theory+Seminar&acadyear=2015-2016&printserieslist=Show+List">Deformation Theory Seminar</a>, Philadelphia PA</dd>
+<dd>14 May -- 15 May 2016: <a href="https://math.temple.edu/events/gscagt/">Second Annual Graduate Student Conference in Algebra, Geometry, and Topology</a>, Temple University, Philadelphia PA, USA. <a href="slides/2016-05-14_TempleTalk.pdf">Slides</a></dd>
+-->
+</dl>
+
+<!--
+<h2><p>Conferences and travels</p></h2>
+<dl>
+<dd>22 May -- 31 August 2017: <a href="http://www.him.uni-bonn.de/programs/past-programs/past-trimester-programs/k-theory-2017/description/">K-Theory and Related Fields</a>, Hausdorff Research Institute for Mathematics, Bonn, Germany.</dd>
+<dd>29 May -- 02 June 2017: <a href="http://www.hcm.uni-bonn.de/events/eventpages/hausdorff-school/wwwhcmuni-bonndehsfasim0/ncg-2017/">Hausdorff School: Derived Noncommutative Geometry</a>, Hausdorff Center for Mathematics, Bonn, Germany.</dd>
+<dd>25 -- 26 March 2017: <a href="http://www.mathematics.pitt.edu/event/cohomology-theories-categories-and-applications">Topology Workshop -- Cohomology Theories, Categories, and Applications</a>, The University of Pittsburgh, Pittsburgh PA, USA</dd>
+<dd>21 -- 24 November 2016: <a href="https://www.him.uni-bonn.de/programs/current-trimester-program/topology-2016/workshop-fusion-systems-and-equivariant-algebraic-topology/">Workshop: Fusion systems and equivariant algebraic topology</a>, Hausdorff Research Institute for Mathematics, Bonn, Germany.</dd>
+<dd>7 -- 11 November 2016: <a href="http://www.him.uni-bonn.de/programs/current-trimester-program/topology-2016/workshop-hermitian-k-theory-and-trace-methods/">Workshop: Hermitian K-theory and trace methods</a>, Hausdorff Research Institute for Mathematics, Bonn, Germany.</dd>
+
+<dd>24 -- 28 October 2016: <a href="https://www.him.uni-bonn.de/programs/current-trimester-program/topology-2016/workshop-the-farrell-jones-conjecture/">Workshop: The Farrell-Jones conjecture</a>, Hausdorff Research Institute for Mathematics, Bonn, Germany.</dd>
+<dd>26 --30 September 2016: <a href="https://www.gk1821.uni-freiburg.de/event/summerschool/Summer_School_2016">Summer School "Coarse Index Theory"</a>, Albert-Ludwigs-Universit&auml;t Freiburg, Freiburg, Germany</dd>
+<dd>17--18 September 2016: <a href="https://sites.google.com/a/vcu.edu/ggw/">Generalized Geometry Workshop</a>, Swarthmore College, Swarthmore PA</dd>
+</dl>
+
+-->
+
+<h2><p>Seminars</p></h2>
+<dl>
+<dd><a href="seminars/pastseminars.html">Past seminars</a></dd>
+</dl>
+
+
+
+<h2><p>Notes</p></h2>
+<ul>
+  <li><a href="heateq.pdf">The Heat Equation Method in Index Theory</a></li>
+</ul>
+<br>
+
+
+
+
+<!--
+<h2><p>Collaborators</p></h2>
+<dl>
+<dt><a href="http://myweb.liu.edu/~dredden/">Corbett Redden</a></dt>
+<dt><a href="http://www.sjcny.edu/directory/faculty/cheyne-miller">Cheyne Miller</a></dt>
+<dt><a href="http://arthur-parzygnat.uconn.edu/">Arthur Parzygnat</a></dt>
+<br>
+</dl>
+-->
+
+<!--  <h2><p>Personal</p></h2>-->
+<!-- <a href="interests/interests.html">Personal Interests</a><br> -->
+<!--  <dl> -->
+<!--       <dd><a href="running/running.html">Running</a></dd>-->
+<!--      <dd><a href="operas/operas.html">Operas</a></dd> -->
+<!--      <dd><a href="nyclife/nyclife.html">New York Life</a></dd>-->
+<!--      <dd><a href="homeland/homeland.html">Homeland</a></dd>-->
+<!--  </dl> -->
+<!--<a href="interests/interests.html">Personal Interests</a><br> -->
+
+<!-- <h2><p>Family</p></h2>
+<dl>
+      <dd><a href="http://www.yeojoopark.com">My sister</a></dd>
+      <dd></dd>
+      <br>
+</dl>-->
+
+<!-- <a href="bruckner/bruckner.html">Feierlich langsam - Doch nicht schleppend</a><br> -->
+<br><br>
+<!--
+<a href="4214-06/4214-06.html">4214-06</a><br><br>-->
+
+Last Updated: 09 March 2020
+
+</font>
+</body>
+</html>
