--- a/teaching/s2020_fom1.html
+++ b/teaching/s2020_fom1.html
@@ -59,8 +59,9 @@
 2016-01-27: There will be a student ambassador from the Dolciani Mathematics Learning Center sometime in the beginning of the semester, and introduce about the center for about five minutes. Please welcome him/her and have interest.<br>
 2016-01-27: Check out <FONT COLOR="red">Homework #1</FONT> below.<br>
 -->
-2020-03-06: Please see from below <FONT COLOR="#C40062">Updates regarding the new Corona Virus (COVID-19) outbreak.</FONT><br>
-2020-03-06: Welcome!<br>
+2020-03-09: Below in <FONT COLOR="#C40062">Assignment-based Classes</FONT>, necessary items will be posted by March 17th 19:00. Please come back to this page around that time for any update.<br>
+2020-03-09: Please see from below <FONT COLOR="#C40062">Updates and plan for Assignment-based Class due to a new Corona Virus (COVID-19) outbreak.</FONT><br>
+2020-03-09: Welcome!<br>
 
 
 
@@ -94,6 +95,15 @@ Following the decision of the university center, the first day of class has been
 
 
 
+<h2><p>Updates and plan for Assignment-based Class due to a new Corona Virus (COVID-19) outbreak</p></h2>
+Following the decision of the university center, the first day of class has been deferred to March 16th. Also following another decision of the university, we shall not meet during the period March 16th to 28th and make-up those 6-contact hours by an "Assignment-based Class." See the course syllabus for details. Please stay tuned for any further updates which will be posted on the course webpage.
+
+
+<h2><p>Assignment-based Classes</p></h2>
+Week 1: TBA<br><br>
+Week 2: TBA<br>
+
+<br><br>
 
 
 
