--- a/teaching/s2020_fom1.html
+++ b/teaching/s2020_fom1.html
@@ -59,6 +59,7 @@
 2016-01-27: There will be a student ambassador from the Dolciani Mathematics Learning Center sometime in the beginning of the semester, and introduce about the center for about five minutes. Please welcome him/her and have interest.<br>
 2016-01-27: Check out <FONT COLOR="red">Homework #1</FONT> below.<br>
 -->
+2020-03-15: Please find the <FONT color="#800080">Assignment for Week 1</FONT> from below.
 2020-03-09: Below in <FONT COLOR="#C40062">Assignment-based Classes</FONT>, necessary items will be posted by March 17th 19:00. Please come back to this page around that time for any update.<br>
 2020-03-09: Please see from below <FONT COLOR="#C40062">Updates and plan for Assignment-based Class due to a new Corona Virus (COVID-19) outbreak.</FONT><br>
 2020-03-09: Welcome!<br>
@@ -66,7 +67,9 @@
 
 
 <h2><p>Homework</p></h2>
-<b>Homework  #1</b> TBA
+<b>Homework  #1</b> 9 problems. Due Date: March 31st.<br>
+Exercises in the lecture note pages 1, 2, 3, 11. (Those ones with * are optional).<br>
+Exercises in p.35 #8, 12, 13, 14, 16<br>
 
 
 
@@ -82,7 +85,7 @@ In coming Spring 2016, I will be teaching <b>MATH250-02: Calculus with Analytic 
 
 
 <h2><p>Links</p></h2>
-<a href="http://newton.kias.re.kr/~byungdo">Webpage of Byungdo Park</a><br>
+<a href="https://byungdo.github.io/">Webpage of Byungdo Park</a><br>
 <a href="http://edu.chungbuk.ac.kr/mathedu/index.do">CBNU Mathematics Education Department Homepage</a><br>
 <br><br>
 
@@ -100,7 +103,8 @@ Following the decision of the university center, the first day of class has been
 
 
 <h2><p>Assignment-based Classes</p></h2>
-Week 1: TBA<br><br>
+Week 1: Read the main textbook pages --18 and complete Homework #1 by the due date. Lecture note is available on CBNU e-Campus (blackboard).
+<br><br>
 Week 2: TBA<br>
 
 <br><br>
