--- a/teaching/s2020_geom1.html
+++ b/teaching/s2020_geom1.html
@@ -51,8 +51,11 @@
 
 
 <h2><p>Homework</p></h2>
-Problems are taken from end-of-section exercises.<br><br>
-<b>Homework  #1</b> TBA
+<b>Homework  #1</b> 9 problems. Due Date: March 31st.<br>
+An exercise in the lecture note pages 8--9.<br>
+Exercises in p.4 #1, 2, 3, 4<br>
+Exercises in p.7 #2, 3<br>
+Exercises in p.10 #3, 4<br>
 <!--
 13 problems. Due Date: September 18th.<br>
 Exercise 1.1. in p.8 #2 <br>
@@ -140,7 +143,8 @@ Following the decision of the university center, the first day of class has been
 
 
 <h2><p>Assignment-based Classes</p></h2>
-Week 1: TBA<br><br>
+Week 1:  Read the main textbook from Sections 1.1 to 1.5 and complete Homework #1 above by the due date. Lecture notes and reading materials are available on CBNU e-Campus (blackboard).
+<br><br>
 Week 2: TBA<br>
 
 <br><br>
@@ -153,7 +157,7 @@ In coming Spring 2016, I will be teaching <b>MATH250-02: Calculus with Analytic 
 
 
 <h2><p>Links</p></h2>
-<a href="http://newton.kias.re.kr/~byungdo">Webpage of Byungdo Park</a><br>
+<a href="https://byungdo.github.io/">Webpage of Byungdo Park</a><br>
 <a href="http://edu.chungbuk.ac.kr/mathedu/index.do">CBNU Mathematics Education Department Homepage</a><br>
 <br><br>
 
