--- a/teaching/s2020_geom1.html
+++ b/teaching/s2020_geom1.html
@@ -45,6 +45,7 @@
 2019-09-14: Check out <FONT COLOR="red">Homework #2</FONT> below.<br>
 2019-09-08: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 -->
+2020-03-15: Please find the <FONT color="#800080">Assignment for Week 1</FONT> from below.<br>
 2020-03-07: Below in <FONT COLOR="#C40062">Assignment-based Classes</FONT>, necessary items will be posted by March 16th 15:00. Please come back to this page around that time for any update. Around the same time, your reading materials will be posted in <a href="https://cbnu.blackboard.com/"  title="Open CBNU eCampus">CBNU eCampus</a>.<br>
 2020-03-07: Please see from below <FONT COLOR="#C40062">Updates and plan for Assignment-based Class due to a new Corona Virus (COVID-19) outbreak.</FONT><br>
 2020-03-07: Welcome!<br>
