--- a/teaching/s2020_fom1.html
+++ b/teaching/s2020_fom1.html
@@ -85,14 +85,14 @@ In coming Spring 2016, I will be teaching <b>MATH250-02: Calculus with Analytic 
 
 
 
-<h2><p>Updates regarding the new Corona Virus (COVID-19) outbreak:</p></h2>
+<h2><p>Updates regarding the new Corona Virus (COVID-19) outbreak</p></h2>
 Following the decision of the university center, the first day of class has been deferred to March 16th.  Accordingly our first day of class will be Tuesday, March the 17th. Please stay tuned for any further updates which will be posted on the course webpage.
 
 
 
 
 
-<h2><p>Updates and plan for Assignment-based Class due to a new Corona Virus (COVID-19) outbreak</p></h2>
+<h2><p>Updates and plan for Assignment-based Class</p></h2>
 Following the decision of the university center, the first day of class has been deferred to March 16th. Also following another decision of the university, we shall not meet during the period March 16th to 28th and make-up those 6-contact hours by an "Assignment-based Class." See the course syllabus for details. Please stay tuned for any further updates which will be posted on the course webpage.
 
 
