--- a/teaching/s2020_fom1.html
+++ b/teaching/s2020_fom1.html
@@ -83,16 +83,7 @@ Exercises in p.35 #8, 12, 13, 14, 16<br>
 In coming Spring 2016, I will be teaching <b>MATH250-02: Calculus with Analytic Geometry 3</b> meeting <b>Mondays and Wednesdays 5:35PM -- 7:25PM</b>. All are very welcome!<br>
  -->
 
-
-
-<h2><p>Updates regarding the new Corona Virus (COVID-19) outbreak</p></h2>
-Following the decision of the university center, the first day of class has been deferred to March 16th.  Accordingly our first day of class will be Tuesday, March the 17th. Please stay tuned for any further updates which will be posted on the course webpage.
-
-
-
-
-
-<h2><p>Updates and plan for Assignment-based Class</p></h2>
+<h2><p>Updates and plan for Assignment-based Class due to  new Corona Virus (COVID-19) outbreak</p></h2>
 Following the decision of the university center, the first day of class has been deferred to March 16th. Also following another decision of the university, we shall not meet during the period March 16th to 28th and make-up those 6-contact hours by an "Assignment-based Class." See the course syllabus for details. Please stay tuned for any further updates which will be posted on the course webpage.
 
 
