--- a/teaching/s2020_fom1.html
+++ b/teaching/s2020_fom1.html
@@ -59,6 +59,7 @@
 2016-01-27: There will be a student ambassador from the Dolciani Mathematics Learning Center sometime in the beginning of the semester, and introduce about the center for about five minutes. Please welcome him/her and have interest.<br>
 2016-01-27: Check out <FONT COLOR="red">Homework #1</FONT> below.<br>
 -->
+2020-03-16: If you are interested in having a skype meeting, I will be available on this Thursday the 19th evening for talking. Please email me your skype ID if you want to be in. No action is needed if you are okay with doing <FONT color="#800080">Assignment for Week 1.</FONT><br>
 2020-03-15: Please find the <FONT color="#800080">Assignment for Week 1</FONT> from below.<br>
 2020-03-09: Below in <FONT COLOR="#C40062">Assignment-based Classes</FONT>, necessary items will be posted by March 17th 19:00. Please come back to this page around that time for any update.<br>
 2020-03-09: Please see from below <FONT COLOR="#C40062">Updates and plan for Assignment-based Class due to a new Corona Virus (COVID-19) outbreak.</FONT><br>
