--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ New York, NY 10019<br><br><br>
 <h2><p>About me</p></h2>
  I am an Assistant Professor at the <a href=http://edu.chungbuk.ac.kr/mathedu/index.do>Department of Mathematics Education</a>, <a href=https://www.cbnu.ac.kr/site/english/main.do>Chungbuk National University</a>.<br><br>
 
-Previously, I was a Research Fellow (Postdoc) at the <a href="http://www.kias.re.kr/">School of Mathematics, Korea Institute for Advanced Study</a>. Before that, I worked in Bonn, Germany as a Postdoctoral Fellow at <a href="http://www.mpim-bonn.mpg.de/">Max-Planck-Institut f&uuml;r Mathematik</a> and as a guest of <a href="http://www.him.uni-bonn.de/">Hausdorff Research Institute for Mathematics</a>. I also taught mathematics and advised students in New York City for seven semesters. I received my PhD from <a href="http://math.gc.cuny.edu">CUNY Graduate Center</a>. Here is my <a href="http://academicworks.cuny.edu/gc_etds/1533/">thesis</a>.<br><br>
+Previously, I was a Research Fellow (Postdoc) at the <a href="http://www.kias.re.kr/">School of Mathematics, Korea Institute for Advanced Study</a>. Before that, I worked in Bonn, Germany as a Postdoctoral Fellow at <a href="http://www.mpim-bonn.mpg.de/">Max-Planck-Institut f&uuml;r Mathematik</a> and as a guest of <a href="http://www.him.uni-bonn.de/">Hausdorff Research Institute for Mathematics</a>. I also taught mathematics and advised students in New York City for seven semesters. I received my PhD from <a href="http://math.gc.cuny.edu">CUNY Graduate Center</a>. My thesis is <a href="http://academicworks.cuny.edu/gc_etds/1533/">here</a>. Before coming to the US, I studied Mathematics at <a href="http://www.yonsei.ac.kr/">Yonsei University</a> in Seoul, South Korea.<br><br>
 
 Here is my <a href="CV_Park.pdf">CV</a>.<br><br>
 <b>Address:</b> Department of Mathematics Education, Chungbuk National University, 1 Chungdaero Seowon-Gu, Cheongju 28644, Republic of Korea<br><br>
@@ -52,7 +52,7 @@ Here is my <a href="CV_Park.pdf">CV</a>.<br><br>
 
 <h2><p>Publications and preprints</p></h2>
 <ul>
-  <li>Brown representability on directed graphs, with <a href="https://mathscinet.ams.org/mathscinet/MRAuthorID/1255865">Zachary McGuirk</a>.</li>
+  <li>Brown representability for directed graphs, with <a href="https://mathscinet.ams.org/mathscinet/MRAuthorID/1255865">Zachary McGuirk</a>. <a href="http://arxiv.org/abs/2003.07426">ArXiv</a></li>
   <li>Noncommutative differential K-theory, with <a href="https://arthur-parzygnat.uconn.edu/">Arthur J. Parzygnat</a>, <a href="http://myweb.liu.edu/~dredden/">Corbett Redden</a>, and <a href="https://math-inf.uni-greifswald.de/en/department/about-us/employees/augusto-stoffel/">Augusto Stoffel</a>.</li>
   <li>A classification of equivariant gerbe connections, with <a href="http://myweb.liu.edu/~dredden/">Corbett Redden</a>, <a href="https://doi.org/10.1142/S0219199718500013"><em>Commun.
 Contemp. Math.</a></em> <b>21</b>(2) (2019) 1--40. <a href="http://arxiv.org/abs/1709.06003">ArXiv</a></li>
@@ -60,7 +60,7 @@ Contemp. Math.</a></em> <b>21</b>(2) (2019) 1--40. <a href="http://arxiv.org/abs
   <li>A smooth variant of Hopkins-Singer differential K-theory, <em><a href="http://nyjm.albany.edu/j/2017/23-30.html">New York J. Math.</a></em>,  <b>23</b> (2017) 655--670. <a href="http://arxiv.org/abs/1607.08686">ArXiv</a></li>
  </ul>
 
-  
+
 <h2><p>In preparation</p></h2>
 <ul>
   <li>Cycle maps in twisted differential K-theory, with Daniel Grady.</li>
@@ -75,9 +75,9 @@ Contemp. Math.</a></em> <b>21</b>(2) (2019) 1--40. <a href="http://arxiv.org/abs
 </ul>
 -->
 
-  
-  
-  
+
+
+
 <h2><p>Teaching</p></h2>
 <dl>
 <dd><a href="teaching/s2020_fom1.html">Foundation of Mathematics I</a> (Graduate Course)</dd>
@@ -91,8 +91,8 @@ Contemp. Math.</a></em> <b>21</b>(2) (2019) 1--40. <a href="http://arxiv.org/abs
 
 
 
-  
-  
+
+
 <h2><p>Selected talks and slides</p></h2>
 <dl>
 <!-- <dd>01 February 2019: <a href="http://www.kias.re.kr/sub05/sub05_02_01_01.jsp?seqno=PGN1720190117-0003&nowBlock=0&page=1&subject=&mjrcd=1&mjrcd2=1&sdate=20190201&edate=20190201&keyField=&keyWord=&list_url=/sub05/sub05_02_02.jsp&slides=">DG Seminar</a>: "What is an infinity category?" -- Biweekely lecture series. Korea Institute for Advanced Study (KIAS), Seoul, Korea.</dd>-->
