--- a/teaching/s2020_geom1.html
+++ b/teaching/s2020_geom1.html
@@ -45,6 +45,9 @@
 2019-09-14: Check out <FONT COLOR="red">Homework #2</FONT> below.<br>
 2019-09-08: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 -->
+2020-03-22: In case we still do not meet in classroom by the due date of any homework, you do not have to come to school for only to hand-in your homework. You can either submit electronically or hand-in when we get to meet each other in classroom. As mentioned on syllabus, late homework are accepted equally. Please be aware of and cooperate in <a href="https://en.wikipedia.org/wiki/Social_distancing"  title="Social distancing">social distancing</a>.<br>
+2020-03-22: Those who want a skype discussion session regarding <FONT color="#800080">Assignment for Week 2</FONT>, please write an email to me to set up an appointment.<br>
+2020-03-22: Please find the <FONT color="#800080">Assignment for Week 2</FONT> from below.<br>
 2020-03-16: If you are interested in having a skype meeting, I will be available on this Thursday the 19th late afternoon for talking. Please email me your skype ID if you want to be in. No action is needed if you are okay with doing <FONT color="#800080">Assignment for Week 1.</FONT><br>
 2020-03-15: Please find the <FONT color="#800080">Assignment for Week 1</FONT> from below.<br>
 2020-03-07: Below in <FONT COLOR="#C40062">Assignment-based Classes</FONT>, necessary items will be posted by March 16th 15:00. Please come back to this page around that time for any update. Around the same time, your reading materials will be posted in <a href="https://cbnu.blackboard.com/"  title="Open CBNU eCampus">CBNU eCampus</a>.<br>
@@ -57,7 +60,14 @@
 An exercise in the lecture note pages 8--9.<br>
 Exercises in p.4 #1, 2, 3, 4<br>
 Exercises in p.7 #2, 3<br>
-Exercises in p.10 #3, 4<br>
+Exercises in p.10 #3, 4<br><br>
+
+<b>Homework  #2</b> 12 problems. Due Date: April 7th.<br>
+A question in the lecture note page 11.<br>
+Exercises in p.16 #1, 3<br>
+Exercises in p.20 #1, 2, 3<br>
+Exercises in p.22 #1, 2, 3<br>
+Exercises in p.24 #1, 2, 3<br><br>
 <!--
 13 problems. Due Date: September 18th.<br>
 Exercise 1.1. in p.8 #2 <br>
@@ -145,10 +155,8 @@ Following the decision of the university center, the first day of class has been
 
 
 <h2><p>Assignment-based Classes</p></h2>
-Week 1:  Read the main textbook from Sections 1.1 to 1.5 and complete Homework #1 above by the due date. Lecture notes and reading materials are available on CBNU e-Campus (blackboard).
-<br><br>
-Week 2: TBA<br>
-
+Week 1:  Read the main textbook from Sections 1.1 to 1.5 and complete Homework #1 above by the due date. Lecture notes and reading materials are available on CBNU e-Campus (blackboard).<br><br>
+Week 2:  Read the main textbook from Sections 1.6 to 1.9 and complete Homework #2 above by the due date. Lecture notes and reading materials are available on CBNU e-Campus (blackboard).
 <br><br>
 <!--
 
