--- a/teaching/s2020_fom1.html
+++ b/teaching/s2020_fom1.html
@@ -59,6 +59,10 @@
 2016-01-27: There will be a student ambassador from the Dolciani Mathematics Learning Center sometime in the beginning of the semester, and introduce about the center for about five minutes. Please welcome him/her and have interest.<br>
 2016-01-27: Check out <FONT COLOR="red">Homework #1</FONT> below.<br>
 -->
+2020-03-24: Please find an update in our plan for <FONT COLOR="#C40062">Assignment-based Classes</FONT> below.<br>
+2020-03-24: In case we still do not meet in classroom by the due date of any homework, you do not have to come to school for only to hand-in your homework. You can either submit electronically or hand-in when we get to meet each other in classroom. As mentioned on syllabus, late homework are accepted equally. Please be aware of and cooperate in <a href="https://en.wikipedia.org/wiki/Social_distancing"  title="Social distancing">social distancing</a>.<br>
+2020-03-24: Those who want a skype discussion session regarding <FONT color="#800080">Assignment for Week 2</FONT>, please write an email to me to set up an appointment.<br>
+2020-03-24: Please find the <FONT color="#800080">Assignment for Week 2</FONT> from below.<br>
 2020-03-16: If you are interested in having a skype meeting, I will be available on this Thursday the 19th evening for talking. Please email me your skype ID if you want to be in. No action is needed if you are okay with doing <FONT color="#800080">Assignment for Week 1.</FONT><br>
 2020-03-15: Please find the <FONT color="#800080">Assignment for Week 1</FONT> from below.<br>
 2020-03-09: Below in <FONT COLOR="#C40062">Assignment-based Classes</FONT>, necessary items will be posted by March 17th 19:00. Please come back to this page around that time for any update.<br>
@@ -70,8 +74,11 @@
 <h2><p>Homework</p></h2>
 <b>Homework  #1</b> 9 problems. Due Date: March 31st.<br>
 Exercises in the lecture note pages 1, 2, 3, 11. (Those ones with * are optional).<br>
-Exercises in p.35 #8, 12, 13, 14, 16<br>
+Exercises in p.35 #8, 12, 13, 14, 16<br><br>
 
+<b>Homework  #2</b> 13 problems. Due Date: April 7th.<br>
+Exercises in the lecture note pages 12, 15, 20 (Question), 23<br>
+Exercises in p.35 #17, 18, 19, 21, 22, 23, 24, 26, 27<br>
 
 
 <br><br>
@@ -85,14 +92,17 @@ In coming Spring 2016, I will be teaching <b>MATH250-02: Calculus with Analytic 
  -->
 
 <h2><p>Updates and plan for Assignment-based Class due to  new Corona Virus (COVID-19) outbreak</p></h2>
-Following the decision of the university center, the first day of class has been deferred to March 16th. Also following another decision of the university, we shall not meet during the period March 16th to 28th and make-up those 6-contact hours by an "Assignment-based Class." See the course syllabus for details. Please stay tuned for any further updates which will be posted on the course webpage.
+Following the decision of the university center, the first day of class has been deferred to March 16th. Also following another decision of the university, we shall not meet during the period March 16th to 28th and make-up those 6-contact hours by an "Assignment-based Class." See the course syllabus for details. Please stay tuned for any further updates which will be posted on the course webpage.<br><br>
+
+Update as of 2020-03-24: The university center has decided not to meet in classroom for an extra week. We shall not meet during the period March 29th to April 4th and continue our "Assignment-based Class" to make up an additional 3 contact hours.<br><br>
 
 
 <h2><p>Assignment-based Classes</p></h2>
-Week 1: Read the main textbook pages --18 and complete Homework #1 by the due date. Lecture note is available on CBNU e-Campus (blackboard).
+Week 1: Read the main textbook pages 8--18 and complete Homework #1 by the due date. Lecture notes are available on CBNU e-Campus (blackboard).
 <br><br>
-Week 2: TBA<br>
-
+Week 2: Read the main textbook pages 19--29 and complete Homework #2 by the due date. Lecture notes are available on CBNU e-Campus (blackboard).
+<br><br>
+Week 3: TBA.
 <br><br>
 
 
