--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ New York, NY 10019<br><br><br>
 
 Previously, I was a Research Fellow (Postdoc) at the <a href="http://www.kias.re.kr/">School of Mathematics, Korea Institute for Advanced Study</a>. Before that, I worked in Bonn, Germany as a Postdoctoral Fellow at <a href="http://www.mpim-bonn.mpg.de/">Max-Planck-Institut f&uuml;r Mathematik</a> and as a guest of <a href="http://www.him.uni-bonn.de/">Hausdorff Research Institute for Mathematics</a>. I also taught mathematics and advised students in New York City for seven semesters. I received my PhD from <a href="http://math.gc.cuny.edu">CUNY Graduate Center</a>. My thesis is <a href="http://academicworks.cuny.edu/gc_etds/1533/">here</a>. Before coming to the US, I studied Mathematics at <a href="http://www.yonsei.ac.kr/">Yonsei University</a> in Seoul, South Korea.<br><br>
 
-Here is my <a href="CV_Park.pdf">CV</a>.<br><br>
+Here is my <a href="CV_Park.pdf">CV</a>. My research is supported by the <a href="https://www.nrf.re.kr/eng/index">National Research Foundation</a> funded by the <a href="https://www.msit.go.kr/english/main/main.do">Ministry of Science and ICT</a>, Republic of Korea.<br><br>
 <b>Address:</b> Department of Mathematics Education, Chungbuk National University, 1 Chungdaero Seowon-Gu, Cheongju 28644, Republic of Korea<br><br>
 <b>Office:</b> E1-1 Room 110 <br><br>
 <b>Phone:</b> +82-43-261-2721<br><br>
