--- a/teaching/s2020_fom1.html
+++ b/teaching/s2020_fom1.html
@@ -94,7 +94,7 @@ In coming Spring 2016, I will be teaching <b>MATH250-02: Calculus with Analytic 
 <h2><p>Updates and plan for Assignment-based Class due to  new Corona Virus (COVID-19) outbreak</p></h2>
 Following the decision of the university center, the first day of class has been deferred to March 16th. Also following another decision of the university, we shall not meet during the period March 16th to 28th and make-up those 6-contact hours by an "Assignment-based Class." See the course syllabus for details. Please stay tuned for any further updates which will be posted on the course webpage.<br><br>
 
-Update as of 2020-03-24: The university center has decided not to meet in classroom for an extra week. We shall not meet during the period March 29th to April 4th and continue our "Assignment-based Class" to make up an additional 3 contact hours.<br><br>
+<b>Update as of 2020-03-24:</b> The university center has decided not to meet in classroom for an extra week. Accordingly, we shall not meet during the period March 29th to April 4th and continue our "Assignment-based Class" to make up an additional 3 contact hours. In addition, there will be skype meetings on Thursdays March 26th and April 2nd at 19:00--20:00. Please check your email for a web link to the skype chatroom for this class.<br><br>
 
 
 <h2><p>Assignment-based Classes</p></h2>
