--- a/teaching/s2020_geom1.html
+++ b/teaching/s2020_geom1.html
@@ -45,6 +45,7 @@
 2019-09-14: Check out <FONT COLOR="red">Homework #2</FONT> below.<br>
 2019-09-08: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 -->
+2020-03-24: Please find an update in our plan for <FONT COLOR="#C40062">Assignment-based Classes</FONT> below.<br>
 2020-03-22: In case we still do not meet in classroom by the due date of any homework, you do not have to come to school for only to hand-in your homework. You can either submit electronically or hand-in when we get to meet each other in classroom. As mentioned on syllabus, late homework are accepted equally. Please be aware of and cooperate in <a href="https://en.wikipedia.org/wiki/Social_distancing"  title="Social distancing">social distancing</a>.<br>
 2020-03-22: Those who want a skype discussion session regarding <FONT color="#800080">Assignment for Week 2</FONT>, please write an email to me to set up an appointment.<br>
 2020-03-22: Please find the <FONT color="#800080">Assignment for Week 2</FONT> from below.<br>
@@ -151,13 +152,16 @@ You may consult available monograph like <a href="https://www.amazon.com/Euclids
 <br><br>
 
 <h2><p>Updates and plan for Assignment-based Class due to a new Corona Virus (COVID-19) outbreak</p></h2>
-Following the decision of the university center, the first day of class has been deferred to March 16th. Also following another decision of the university, we shall not meet during the period March 16th to 28th and make-up those 6-contact hours by an "Assignment-based Class." See the course syllabus for details. Please stay tuned for any further updates which will be posted on the course webpage.
+Following the decision of the university center, the first day of class has been deferred to March 16th. Also following another decision of the university, we shall not meet during the period March 16th to 28th and make-up those 6-contact hours by an "Assignment-based Class." See the course syllabus for details. Please stay tuned for any further updates which will be posted on the course webpage.<br><br>
 
+
+<b>Update as of 2020-03-24:</b> The university center has decided not to meet in classroom for an extra week. Accordingly, we shall not meet during the period March 29th to April 4th and continue our "Assignment-based Class" to make up an additional 3 contact hours. In addition, there will be skype meetings on Thursdays March 26th and April 2nd at 16:00--17:00. Please check your email for a web link to the skype chatroom for this class.<br><br>
 
 <h2><p>Assignment-based Classes</p></h2>
 Week 1:  Read the main textbook from Sections 1.1 to 1.5 and complete Homework #1 above by the due date. Lecture notes and reading materials are available on CBNU e-Campus (blackboard).<br><br>
 Week 2:  Read the main textbook from Sections 1.6 to 1.9 and complete Homework #2 above by the due date. Lecture notes and reading materials are available on CBNU e-Campus (blackboard).
 <br><br>
+Week 3: TBA<br><br>
 <!--
 
 
