--- a/teaching/s2020_dg1.html
+++ b/teaching/s2020_dg1.html
@@ -137,7 +137,7 @@ In coming Spring 2016, I will be teaching <b>MATH250-02: Calculus with Analytic 
 <h2><p>Updates and make-up lesson schedules due to a new Corona Virus (COVID-19) outbreak</p></h2>
 Following the decision of the university center, the first day of class has been deferred to March 16th. Also following another decision of the university, we shall not meet during the period March 16th to 28th. For those 6 contact hours, we shall have <b>make-up classes on Tuesdays, March 31st, April 7th, 14th, 21st, 28th, and May 12th at 16:00--16:50 at E1-1 Room 136.</b> Please stay tuned for any further updates which will be posted on the course webpage.<br><br>
 
-<b>Update as of 2020-03-24:</b> The university center has decided not to meet in classroom for an extra week. Accordingly, we shall not meet during the period March 29th to April 4th. We make-up those additional 3 contact hours on May 19th, 26th, and June 2nd at 16:00--16:50 at E1-1 Room 136. Additionally, we reschedule our March 31st make-up session on June 9th at 16:00--16:50 also at E1-1 Room 136.<br>
+<b>Update as of 2020-03-24:</b> The university center has decided not to meet in classroom for an extra week. Accordingly, we shall not meet during the period March 29th to April 4th. We make-up those additional 3 contact hours on <b>May 19th, 26th, and June 2nd at 16:00--16:50 at E1-1 Room 136.</b> Additionally, we reschedule our March 31st make-up session on <b>June 9th at 16:00--16:50 also at E1-1 Room 136.</b><br>
 
 
 <h2><p>Links</p></h2>
