--- a/teaching/s2020_fom1.html
+++ b/teaching/s2020_fom1.html
@@ -59,6 +59,7 @@
 2016-01-27: There will be a student ambassador from the Dolciani Mathematics Learning Center sometime in the beginning of the semester, and introduce about the center for about five minutes. Please welcome him/her and have interest.<br>
 2016-01-27: Check out <FONT COLOR="red">Homework #1</FONT> below.<br>
 -->
+2020-03-29: Please find the <FONT color="#800080">Assignment for Week 3</FONT> from below.<br>
 2020-03-24: Please find an update in our plan for <FONT COLOR="#C40062">Assignment-based Classes</FONT> below.<br>
 2020-03-24: In case we still do not meet in classroom by the due date of any homework, you do not have to come to school for only to hand-in your homework. You can either submit electronically or hand-in when we get to meet each other in classroom. As mentioned on syllabus, late homework are accepted equally. Please be aware of and cooperate in <a href="https://en.wikipedia.org/wiki/Social_distancing"  title="Social distancing">social distancing</a>.<br>
 2020-03-24: Those who want a skype discussion session regarding <FONT color="#800080">Assignment for Week 2</FONT>, please write an email to me to set up an appointment.<br>
@@ -78,7 +79,11 @@ Exercises in p.35 #8, 12, 13, 14, 16<br><br>
 
 <b>Homework  #2</b> 13 problems. Due Date: April 7th.<br>
 Exercises in the lecture note pages 12, 15, 20 (Question), 23<br>
-Exercises in p.35 #17, 18, 19, 21, 22, 23, 24, 26, 27<br>
+Exercises in p.35 #17, 18, 19, 21, 22, 23, 24, 26, 27<br><br>
+
+<b>Homework  #2</b> 9 problems. Due Date: April 14th.<br>
+Exercises in p.35 #30, 31, 32, 33, 34<br>
+Exercises in p.67 #1, 2, 3, 6<br>
 
 
 <br><br>
@@ -102,7 +107,7 @@ Week 1: Read the main textbook pages 8--18 and complete Homework #1 by the due d
 <br><br>
 Week 2: Read the main textbook pages 19--29 and complete Homework #2 by the due date. Lecture notes are available on CBNU e-Campus (blackboard).
 <br><br>
-Week 3: TBA.
+Week 3: Read the main textbook pages 30--43 and complete Homework #3 by the due date. Lecture notes are available on CBNU e-Campus (blackboard).
 <br><br>
 
 
