--- a/teaching/s2020_geom1.html
+++ b/teaching/s2020_geom1.html
@@ -45,6 +45,7 @@
 2019-09-14: Check out <FONT COLOR="red">Homework #2</FONT> below.<br>
 2019-09-08: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 -->
+2020-03-29: Please find the <FONT color="#800080">Assignment for Week 3</FONT> from below.<br>
 2020-03-24: Please find an update in our plan for <FONT COLOR="#C40062">Assignment-based Classes</FONT> below.<br>
 2020-03-22: In case we still do not meet in classroom by the due date of any homework, you do not have to come to school for only to hand-in your homework. You can either submit electronically or hand-in when we get to meet each other in classroom. As mentioned on syllabus, late homework are accepted equally. Please be aware of and cooperate in <a href="https://en.wikipedia.org/wiki/Social_distancing"  title="Social distancing">social distancing</a>.<br>
 2020-03-22: Those who want a skype discussion session regarding <FONT color="#800080">Assignment for Week 2</FONT>, please write an email to me to set up an appointment.<br>
@@ -69,6 +70,12 @@ Exercises in p.16 #1, 3<br>
 Exercises in p.20 #1, 2, 3<br>
 Exercises in p.22 #1, 2, 3<br>
 Exercises in p.24 #1, 2, 3<br><br>
+
+<b>Homework  #3</b> 8 problems. Due Date: April 14th.<br>
+Exercises in p.27 #3, 4<br>
+Exercises in p.31 #2, 3<br>
+Exercises in p.33 #2, 3<br>
+Exercises in p.34 #1, 2<br><br>
 <!--
 13 problems. Due Date: September 18th.<br>
 Exercise 1.1. in p.8 #2 <br>
@@ -161,7 +168,8 @@ Following the decision of the university center, the first day of class has been
 Week 1:  Read the main textbook from Sections 1.1 to 1.5 and complete Homework #1 above by the due date. Lecture notes and reading materials are available on CBNU e-Campus (blackboard).<br><br>
 Week 2:  Read the main textbook from Sections 1.6 to 1.9 and complete Homework #2 above by the due date. Lecture notes and reading materials are available on CBNU e-Campus (blackboard).
 <br><br>
-Week 3: TBA<br><br>
+Week 3:  Read the main textbook from Sections 1.10 to 1.13 and complete Homework #3 above by the due date. Lecture notes and reading materials are available on CBNU e-Campus (blackboard).
+<br><br>
 <!--
 
 
